# ragstack

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: basic_usage.py  custom_config.py  sample_document.md
ragstack/: __init__.py
ragstack/core/: __init__.py  config.py  pipeline.py
ragstack/generation/: __init__.py  llm.py
ragstack/indexing/: __init__.py  builder.py  chunking.py
ragstack/retrieval/: __init__.py  bm25.py  fusion.py  orchestrator.py  reranker.py  semantic.py
tests/: test_chunking.py  test_pipeline.py
